# fair-housing-guardrail

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY.md  pyproject.toml
.github/workflows/: build.yml
examples/: test_model.ipynb  train_model.ipynb
examples/configs/: test-config-binary.yaml  test-config-multiclass.yaml  test-config.yaml  train-config-binary.yaml  train-config-multiclass.yaml  train-config.yaml
examples/datasets/: sample_data_binary.jsonl  sample_data_multiclass.jsonl  sample_stoplist.txt
examples/test_model/: config.json
fair_housing_guardrail/data/: __init__.py  constants.py  json_dataset.py
fair_housing_guardrail/utils/: __init__.py  fair_housing_classification.py  helper.py  stop_phrases.py
tests/: test_fair_housing_classification.py
