[tool.poetry]
name = "fair-housing-guardrail"
version = "1.0.0"
description = ""
authors = ["Anusha Bagalkotkar <anusha.bagalkotkar@gmail.com>", "Aveek Karmakar <aveekkar@buffalo.edu>", "Trevor Nogues <noguestj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
accelerate = "0.28.0"
evaluate = "0.4.1"
matplotlib = "^3.7.0"
plotly = "5.18.0"
nltk = "3.8.1"
numpy = "^1.24.0"
pandas = "^2.0"
scikit-learn = "1.4.1.post1"
torch = "2.2.2"
tqdm = "4.66.1"
transformers = "4.39.1"
pre-commit = "^3.4.0"
pytest = "^8.1.1"
urllib3 = "1.26.18"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
